--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
 
 /* Your CSS Code here. */
-.container{
+.main{
 	width:200px;
 	background-color:purple;
-}
-h1{
 	border-left-color:green;
 	border-left-width:5px;
-	padding:10px;
+}
+#heading{
+	padding-top:10px;
+	padding-bottom:10px;
+	padding-left:10px;
+	padding-right:10px;
 	font-size:20px;
 	color:white;
 	
