--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,11 @@
 	width:200px;
 	background-color:purple;
 	border-left-color:green;
-	border-left-width:5px;
+	border-left:5px;
 }
 #heading{
 	padding-top:10px;
+	border-left:5px;
 	padding-bottom:10px;
 	padding-left:10px;
 	padding-right:10px;
